docker-compose/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      --file C:\Users\User\Documents\09072021\fse2\eStockmarket\k8s\docker-compose.yml
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kibana
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          --file C:\Users\User\Documents\09072021\fse2\eStockmarket\k8s\docker-compose.yml
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/elastic: "true"
        io.kompose.service: kibana
    spec:
      containers:
      - env:
        - name: ELASTICSEARCH_URL
          value: http://localhost:9200
        image: docker.elastic.co/kibana/kibana:7.9.2
        imagePullPolicy: ""
        name: kibana
        ports:
        - containerPort: 5601
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
