docker-compose/dotnetcorepromgrafana-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: dotnetcorepromgrafana
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/dotnetcorepromgrafana: "true"
  podSelector:
    matchLabels:
      io.kompose.network/dotnetcorepromgrafana: "true"
